--- a/src/web/stylesheets/common/pages/codekata/style.scss
+++ b/src/web/stylesheets/common/pages/codekata/style.scss
@@ -24,7 +24,7 @@
       }
     }
 
-    &.turtle-navbar {
+    &.game-navbar {
       background-color: transparent;
 
       .leaderboard-btn {
@@ -39,10 +39,10 @@
     }
   }
 
-  .turtle-frame {
+  .codekata-frame {
     overflow: auto;
 
-    .turtle-card-container {
+    .codekata-card-container {
       position: relative;
       left: 50%;
       width: 45%;
@@ -53,7 +53,7 @@
         display: none;
       }
 
-      .turtle-card {
+      .codekata-card {
         width: 100%;
         border-radius: 12px;
         background-color: gt.theme-var(game-dark-transparent, null, $thememaplight, $cssvars);
@@ -95,7 +95,7 @@
       }
     }
 
-    .turtle-mob-card {
+    .codekata-mob-card {
       display: flex;
       flex-direction: column;
       height: 100%;
@@ -104,13 +104,13 @@
         display: none;
       }
 
-      .turtle-title,
-      .turtle-actions {
+      .codekata-title,
+      .codekata-actions {
         display: grid;
         place-content: center;
       }
 
-      .turtle-title {
+      .codekata-title {
         flex: 4;
 
         .gameTitle {
@@ -119,14 +119,14 @@
         }
       }
 
-      .turtle-actions {
+      .codekata-actions {
         flex: 1;
 
         img {
           width: 2.5rem;
         }
 
-        .turtle-play-btn {
+        .codekata-play-btn {
           .play-btn-container {
             background-color: gt.theme-var(bg-1);
             border-radius: 50%;
@@ -146,7 +146,7 @@
     }
   }
 
-  // .turtle-game-container {
+  // .codekata-game-container {
   //   display: flex;
   //   align-items: stretch;
   //   height: calc(100vh - 62px);
@@ -156,11 +156,11 @@
   //   .game-container-block {
   //     position: relative;
 
-  //     .turtle-editor-container {
+  //     .codekata-editor-container {
   //       overflow: visible;
 
   //       #tabsContent {
-  //         #turtleBlock {
+  //         #codekataBlock {
   //           .injectionDiv {
   //             overflow: visible;
 
@@ -172,7 +172,7 @@
   //           }
   //         }
 
-  //         #turtleOutput {
+  //         #codekataOutput {
   //           #outputSection {
   //             position: relative;
   //             background-color: gt.theme-var(bg-1);
@@ -221,9 +221,9 @@
   //     }
   //   }
 
-  //   .turtle-question-container,
-  //   .turtle-block-container,
-  //   .turtle-editor-container {
+  //   .codekata-question-container,
+  //   .codekata-block-container,
+  //   .codekata-editor-container {
   //     height: 100%;
   //     border-radius: 0.75rem;
   //     overflow: hidden;
@@ -260,23 +260,23 @@
   //     }
   //   }
 
-  //   .turtle-question-container {
+  //   .codekata-question-container {
   //     display: flex;
   //     flex-direction: column;
 
-  //     .turtle-question-block,
-  //     .turtle-exoup-block {
+  //     .codekata-question-block,
+  //     .codekata-exoup-block {
   //       flex-basis: 0;
   //       flex-grow: 1;
   //       height: 50%;
   //       background-color: gt.theme-var(game-transparent-bg, null, $thememaplight, $cssvars);
   //     }
 
-  //     .turtle-title-block {
+  //     .codekata-title-block {
   //       background-color: gt.theme-var(game-question-title-bg, null, $thememaplight, $cssvars);
   //       padding: 0.75rem;
 
-  //       .turtle-question-title {
+  //       .codekata-question-title {
   //         color: gt.theme-var(text-color-1);
   //         font-weight: bold;
   //         font-size: 1.125rem;
@@ -284,17 +284,17 @@
   //       }
   //     }
 
-  //     .turtle-question-content {
+  //     .codekata-question-content {
   //       height: calc(100% - 51px);
   //       overflow-y: auto;
   //       padding: 0.5rem;
 
-  //       .turtle-question {
+  //       .codekata-question {
   //         font-weight: bold;
   //       }
 
-  //       .turtle-question-instructions {
-  //         .turtle-question-instructions-title {
+  //       .codekata-question-instructions {
+  //         .codekata-question-instructions-title {
   //           font-weight: bold;
   //           margin-bottom: 0;
   //         }
@@ -302,18 +302,18 @@
   //     }
   //   }
 
-  //   .turtle-block-container {
+  //   .codekata-block-container {
   //     // background-color: gt.theme-var(game-dark-transparent, null, $thememaplight, $cssvars);
   //     background-color: gt.theme-var(bg-2);
   //     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   //     backdrop-filter: blur(20px);
   //     -webkit-backdrop-filter: blur(20px);
 
-  //     .turtle-blockly-container {
+  //     .codekata-blockly-container {
   //       background-color: gt.theme-var(bg-4);
   //       padding: 0.6rem;
 
-  //       .turtle-blockly-title {
+  //       .codekata-blockly-title {
   //         color: gt.theme-var(text-color-2);
   //         font-weight: bold;
   //         font-size: 1.125rem;
@@ -322,10 +322,10 @@
   //     }
   //   }
 
-  //   .turtle-editor-container {
+  //   .codekata-editor-container {
   //     background-color: gt.theme-var(bg-2);
 
-  //     .turtle-editor-title {
+  //     .codekata-editor-title {
   //       background-color: gt.theme-var(bg-4);
   //       padding-top: 0.25rem;
   //       display: flex;
@@ -369,7 +369,7 @@
   //     }
   //   }
 
-  //   .turtle-skeleton-body {
+  //   .codekata-skeleton-body {
   //     height: 100%;
   //     // animation: refresh 2.5s ease-out infinite;
   //     // background-image: linear-gradient(90deg, gt.theme-var(text-color-5), gt.theme-var(bg-2) 50%, gt.theme-var(skeleton-bg) 50%);
@@ -382,7 +382,7 @@
   //   height: calc(100vh - 62px - 76px);
   //   overflow: hidden;
 
-  //   .turtle-mob-game-container {
+  //   .codekata-mob-game-container {
   //     display: flex;
   //     flex-direction: column;
 
@@ -393,28 +393,28 @@
   //         height: calc(100vh - 62px - 76px - 81px);
 
   //         &#questionBlock {
-  //           .turtle-mob-question-container {
+  //           .codekata-mob-question-container {
   //             padding: 0 1rem;
   //             height: 100%;
   //             display: grid;
   //             grid-template-rows: 43% 43% 14%;
 
-  //             .turtle-mob-question-block {
+  //             .codekata-mob-question-block {
   //               height: 100%;
   //               overflow: hidden;
 
-  //               .turtle-question-header,
-  //               .turtle-question-title,
-  //               .turtle-question-instructions-title {
+  //               .codekata-question-header,
+  //               .codekata-question-title,
+  //               .codekata-question-instructions-title {
   //                 font-weight: bold;
   //               }
 
-  //               .turtle-question-header {
+  //               .codekata-question-header {
   //                 color: gt.theme-var(text-color-2);
   //                 margin-bottom: 0;
   //               }
 
-  //               .turtle-question-card {
+  //               .codekata-question-card {
   //                 background-color: gt.theme-var(game-transparent-bg, null, $thememaplight, $cssvars);
   //                 border-radius: 0.75rem;
   //                 padding: 1rem;
@@ -424,7 +424,7 @@
   //               }
   //             }
 
-  //             .turtle-mob-output-block {
+  //             .codekata-mob-output-block {
   //               background-color: transparent;
   //               // border: 1px solid gt.theme-var(game-btn-bg, null, $thememaplight, $cssvars);
   //               border-radius: 0.75rem;
@@ -468,7 +468,7 @@
   //                 background-color: gt.theme-var(bg-1);
   //                 transition: all 0.1s ease-in-out;
 
-  //                 .turtle-qnout-container {
+  //                 .codekata-qnout-container {
   //                   height: 100%;
   //                   overflow: auto;
   //                   position: relative;
@@ -482,7 +482,7 @@
   //               }
   //             }
 
-  //             .turtle-mob-hero-btn-block {
+  //             .codekata-mob-hero-btn-block {
   //               display: flex;
   //               align-items: center;
 
@@ -504,7 +504,7 @@
   //           }
   //         }
 
-  //         // &#turtleBlock {
+  //         // &#codekataBlock {
   //         //   .blocklyScrollbarVertical {
   //         //     left: 2%;
 
@@ -522,7 +522,7 @@
   //         //   }
   //         // }
 
-  //         &#turtleOutput {
+  //         &#codekataOutput {
   //           background: gt.theme-var(bg-1);
 
   //           #outputSection {
@@ -790,8 +790,8 @@
   }
 
   .language-select {
-    color: #fff;
-    background-color: #000;
+    color: gt.theme-var(bg-1);
+    background-color: gt.theme-var(tc-font-color);
     max-width: 50%;
     width: 100%;
     display: block;
@@ -800,19 +800,19 @@
     font-weight: 400;
     line-height: 1.5;
     background-clip: padding-box;
-    border-radius: 0.25rem;
+    border-radius: 0.5rem;
   }
 
   .language-select-cont-mob {
-    background-color: #000;
+    background-color: gt.theme-var(tc-font-color);
     width: 100%;
     padding: 11px 1rem;
   }
 
   .language-select-mob {
     width: 100%;
-    background-color: #000;
-    color: #fff;
+    background-color: gt.theme-var(tc-font-color);
+    color: gt.theme-var(bg-1);
     display: block;
     font-size: 1rem;
     font-weight: 400;
@@ -821,7 +821,7 @@
 
   .slide-open-btn {
     position: absolute;
-    background-color: #505659;
+    background-color: gt.theme-var(text-color-13);
     height: 100px;
     width: 40px;
     border-top-left-radius: 12px;
@@ -834,7 +834,7 @@
   }
 
   .slide-close-btn {
-    background-color: #505659;
+    background-color: gt.theme-var(text-color-13);
     height: 100px;
     width: 40px;
     border-top-left-radius: 12px;
@@ -861,30 +861,103 @@
       background-color: transparent;
     }
 
-    .output-modal-cont {
+    .modal-container-mob {
       height: 100%;
       width: calc(100vw - 40px);
+      background-color: gt.theme-var(bg-2);
+      display: flex;
+      flex-direction: column;
+
+      .nav-tabs {
+        .nav-item {
+          .nav-link {
+            color: gt.theme-var(text-color-2);
+            border: unset;
+            padding-bottom: 0.75rem;
+            font-weight: bold;
+
+            &.active {
+              color: gt.theme-var(text-color-2);
+              background: linear-gradient(to right, gt.theme-var(text-color-2), gt.theme-var(text-color-2));
+              background-size: 100% 0.25rem;
+              background-position: bottom 0 left 0, bottom 0.25rem left 0;
+              background-repeat: no-repeat;
+            }
+          }
+        }
+      }
+
+      .tab-content {
+        flex: 1;
+
+        .tab-pane {
+          height: 100%;
+
+          textarea {
+            height: 100%;
+          }
+        }
+      }
+
+      .output-cont {
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+
+        .modal-output-container {
+          flex: 1;
+          overflow: auto;
+        }
+      }
+
+      .run-btn-mob {
+        display: flex;
+        align-items: center;
+        margin: auto;
+        width: fit-content;
+
+        p {
+          margin-right: 1rem;
+        }
+      }
     }
   }
 
   .question-content-mob {
     position: absolute;
-    background: white;
+    background: gt.theme-var(bg-1);
     right: 0;
     left: 0;
-    padding: 0 18px;
+    padding: 0.5rem 1.125rem;
     z-index: 5;
+    max-height: 40%;
+    overflow: auto;
+
+    .input-description,
+    .output-description,
+    .sample-input,
+    .sample-output {
+      margin: 1.5rem 0;
+
+      p {
+        margin-bottom: 0;
+
+        &:first-child {
+          margin-bottom: 0.125rem;
+        }
+      }
+    }
   }
 
   .language-cont {
     padding: 4.5px 16px;
-    background-color: #000;
+    background-color: gt.theme-var(tc-font-color);
     border-top-left-radius: 12px;
     border-top-right-radius: 12px;
   }
 
   .run-btn {
-    color: #fff;
+    color: gt.theme-var(bg-1);
     background-color: gt.theme-var(game-run-btn, null, $thememaplight, $cssvars);
     position: absolute;
     bottom: 34px;
@@ -892,25 +965,42 @@
   }
 
   .run-btn-mob {
-    color: #fff;
+    color: gt.theme-var(bg-1);
     background-color: gt.theme-var(game-run-btn, null, $thememaplight, $cssvars);
     width: 100%;
+    padding: 0.5rem 1rem;
+    border-radius: 0.75rem;
+
+    p {
+      font-size: 1.25rem;
+    }
   }
 
   .run-btn-cont {
     position: absolute;
     bottom: 16px;
     width: calc(100vw - 32px);
-    z-index: 4;
+    z-index: 10;
     margin: 0 16px;
   }
 
-  .submit-btn-cont-mob {
+  .submit-btn-cont-mob,
+  .run-btn-cont-mob {
     position: absolute;
-    bottom: 16px;
+    bottom: 1rem;
     z-index: 4;
-    margin: 0 16px;
     width: calc(100vw - 70px);
+    text-align: center;
+
+    button {
+      border-radius: 0.5rem;
+    }
+  }
+
+  .run-btn-cont-mob {
+    p {
+      margin-right: 0.5rem;
+    }
   }
 
   .blur-background {
@@ -922,21 +1012,61 @@
   }
 
   .submit-btn {
-    color: #fff;
+    color: gt.theme-var(bg-1);
     background-color: gt.theme-var(game-run-btn, null, $thememaplight, $cssvars);
   }
 
   .submit-btn-cont {
     text-align: center;
     position: absolute;
-    bottom: 24px;
+    bottom: 0;
     left: 0;
     right: 0;
+
+    button {
+      border-radius: 0.75rem;
+    }
   }
 
+  .left-cont {
+    display: flex;
+    flex-direction: column;
+    
+    .input-container {
+      flex: 1;
+
+      textarea {
+        height: 100%;
+      }
+    }
+  }
+
+  
+
   .code-container {
-    height: fit-content;
+    height: 65vh;
     position: relative;
+    display: flex;
+    flex-direction: column;
+
+    .editor-container {
+      flex: 1;
+
+      #codeEditor {
+        border-bottom-left-radius: 0.75rem;
+        border-bottom-right-radius: 0.75rem;
+      }
+    }
+
+    .run-btn {
+      border-radius: 0.5rem;
+      display: flex;
+      align-items: center;
+
+      p {
+        margin-right: 0.5rem;
+      }
+    }
   }
 
   .play-icon {
@@ -948,48 +1078,115 @@
   }
 
   .input-head {
-    background-color: #000;
+    background-color: gt.theme-var(tc-font-color);
     margin-bottom: 0;
     padding: 0.5rem 1rem;
-    color: #fff;
+    color: gt.theme-var(bg-1);
     border-top-left-radius: 12px;
     border-top-right-radius: 12px;
+
+    .refresh-output-btn {
+      &:hover {
+        cursor: pointer;
+      }
+    }
   }
 
   .input-head-mob {
-    background-color: #000;
+    background-color: gt.theme-var(tc-font-color);
     padding: 11px 16px;
-    color: #fff;
+    color: gt.theme-var(bg-1);
     width: 100%;
   }
 
   .input-textarea {
     width: 100%;
-    border-bottom-right-radius: 12px;
-    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 0.75rem;
+    border-bottom-left-radius: 0.75rem;
   }
 
   .problem-statment-cont {
-    background-color: #fff;
-    border-radius: 12px;
-    padding: 24px;
+    background-color: gt.theme-var(bg-1);
+    border-radius: 0.75rem;
+    padding: 1.5rem;
+    overflow: auto;
+
+    #problem-head {
+      &:hover {
+        cursor: pointer;
+      }
+    }
+
+    #problem-cont {
+      padding-top: 0.5rem;
+
+      &.collapse.show {
+        height: 55vh;
+      }
+
+      .input-description,
+      .output-description,
+      .sample-input,
+      .sample-output {
+        margin: 1.5rem 0;
+  
+        p {
+          margin-bottom: 0;
+  
+          &:first-child {
+            margin-bottom: 0.125rem;
+          }
+        }
+      }
+    }
+
   }
 
-  .problem-statment-cont-mob {
-    background-color: #fff;
-    padding: 15px 18px;
+  .game-mob-container {
+    display: flex;
+    flex-direction: column;
+
+    .problem-statment-cont-mob {
+      background-color: gt.theme-var(game-mob-header-bg, null, $thememaplight, $cssvars);
+      padding: 1rem 1.125rem;
+
+      #problem-head {
+        p {
+          font-weight: bold;
+        }
+      }
+    }
+
+    .editor-container-mob {
+      flex: 1;
+    }
   }
 
   .problem-statment-head {
-    color: #505659;
+    color: gt.theme-var(text-color-13);
   }
 
   .output-cont {
-    background-color: #fff;
+    background-color: gt.theme-var(bg-1);
     border-bottom-right-radius: 12px;
     border-bottom-left-radius: 12px;
     width: 100%;
     height: 100%;
+    padding: 0.5rem 0.75rem;
+
+    p {
+      font-size: 1.25rem;
+    }
+
+    .no-output-container {
+      height: 100%;
+      display: grid;
+      place-content: center;
+
+      p {
+        margin-bottom: 0;
+      }
+    }
   }
 
   @keyframes refresh {
@@ -1037,6 +1234,7 @@
     .game-level-container {
       .close-btn-mob {
         background-color: gt.theme-var(game-run-btn, null, $thememaplight, $cssvars);
+        padding: 0.5rem 1rem;
       }
     }
 
@@ -1056,5 +1254,35 @@
 
   @include gm.media-breakpoint-down(md) {
     background-image: url(../../../../../images/codekata/codekatabg-mob.png);
+  }
+
+  #modal {
+    &.statusModal {
+      .status-modal-content {
+        &.success-modal-content {
+          .next-btn {
+            p {
+              margin-right: 0.5rem;
+            }
+          }
+        }
+
+        &.failure-modal-content {
+          .status-img {
+            img {
+              transform: rotate(90deg);
+            }
+          }
+        }
+
+        .recognition-content {
+          text-align: center;
+
+          button {
+            color: gt.theme-var(text-color-2);
+          }
+        }
+      }
+    }
   }
 }
